logs/09_13_2024/09_13_2024_10_05_02

[ 2024-09-13 10:05:08,161 ] - DEBUG - root - main.py:17 - Initiated Preprocessing Module

[ 2024-09-13 10:05:08,161 ] - DEBUG - root - processDataIngestion.py:11 - Document Ingestion class initialized

[ 2024-09-13 10:05:13,122 ] - DEBUG - root - processDataIngestion.py:33 - Successfully loaded the input file to the memory

[ 2024-09-13 10:05:13,122 ] - DEBUG - root - processEdit.py:10 - Process Edit Message class initialized

[ 2024-09-13 10:05:13,122 ] - DEBUG - root - processJSON.py:25 - JSON Pre-Processing class initiated

[ 2024-09-13 10:05:13,122 ] - DEBUG - root - utils.py:31 - [INFO] : Loading the configuration data

[ 2024-09-13 10:05:13,133 ] - INFO - root - utils.py:37 - Config Yaml loaded succesfully.

[ 2024-09-13 10:05:13,248 ] - DEBUG - root - processEdit.py:85 - Operation on-line extraction has initiated

[ 2024-09-13 10:05:13,248 ] - DEBUG - root - processEdit.py:32 - Started operation on line level adjustment

[ 2024-09-13 10:05:13,249 ] - DEBUG - root - processEdit.py:67 - Forwarding JSON object for futher pre-processing task

[ 2024-09-13 10:05:13,249 ] - DEBUG - root - processJSON.py:437 - Dealing with missing columns and sheets

[ 2024-09-13 10:05:13,267 ] - DEBUG - root - processJSON.py:68 - Started extraction of claim IDs from the input file

[ 2024-09-13 10:05:13,393 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:13,395 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:13,400 ] - DEBUG - root - processJSON.py:359 - Working on Hippa Attribute

[ 2024-09-13 10:05:13,477 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:13,477 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:15,477 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:15,495 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:15,543 ] - DEBUG - root - processJSON.py:387 - Dealing with Raw data from COB

[ 2024-09-13 10:05:15,543 ] - DEBUG - root - processJSON.py:305 - max date replacement task is started

[ 2024-09-13 10:05:16,647 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:16,655 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:16,961 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:16,961 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:17,605 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:17,610 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:18,615 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:18,634 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:20,589 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:05:20,603 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:05:20,649 ] - DEBUG - root - processJSON.py:100 - Data persistance is started

[ 2024-09-13 10:05:20,662 ] - INFO - root - processJSON.py:114 - Data JSON is stored at the location : C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\artifacts\output\24B121111110_wm_invalidproviderselection.json

[ 2024-09-13 10:05:20,663 ] - DEBUG - root - dataFiltration.py:11 - filterData class initialized

[ 2024-09-13 10:05:20,680 ] - DEBUG - root - dataFiltration.py:235 - Got ['24B121111110_wm_invalidproviderselection.json'] for filtering

[ 2024-09-13 10:05:20,680 ] - DEBUG - root - dataFiltration.py:247 - Started filtering 24B121111110_wm_invalidproviderselection

[ 2024-09-13 10:05:20,680 ] - DEBUG - root - dataFiltration.py:180 - Started filtering and appying 2 filter/s

[ 2024-09-13 10:05:20,697 ] - DEBUG - root - dataFiltration.py:137 - applyFilter initialized for input1.providerdetails.npi == none

[ 2024-09-13 10:05:20,848 ] - ERROR - root - main.py:42 - There seems to be a issue in Preprocessing - Traceback (most recent call last):
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\main.py", line 31, in inputPreprocessUnit
    filterObj.getFilteredInputFile(jsonFileName)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 255, in getFilteredInputFile
    dataFrames = self.filterInputFile(inputFile, filters)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 187, in filterInputFile
    dataFrames = self.applyFilter(dataFrames, filterSheet, filterColumn, operator, actualValue) # applying a filter
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 160, in applyFilter
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\frame.py", line 10361, in apply
    return op.apply().__finalize__(self, method="apply")
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 916, in apply
    return self.apply_standard()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1063, in apply_standard
    results, res_index = self.apply_series_generator()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1081, in apply_series_generator
    results[i] = self.func(v, *self.args, **self.kwargs)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 160, in <lambda>
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "<string>", line 1
    ==none
    ^
SyntaxError: invalid syntax

